--- a/examples/excalidraw/with-script-in-browser/index.html
+++ b/examples/excalidraw/with-script-in-browser/index.html
@@ -13,15 +13,13 @@
       window.name = "codesandbox";
       window.EXCALIDRAW_ASSET_PATH = window.origin;
     </script>
-    <link rel="stylesheet" href="/dist/browser/dev/index.css" />
+    <link rel="stylesheet" href="/dist/dev/index.css" />
   </head>
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
 
-    <!-- This is so that we use the bundled excalidraw.development.js file instead
-    of the actual source code -->
     <script type="module">
       import * as ExcalidrawLib from "@excalidraw/excalidraw";
 
