--- a/examples/with-script-in-browser/index.html
+++ b/examples/with-script-in-browser/index.html
@@ -11,7 +11,7 @@
     <title>React App</title>
     <script>
       window.name = "codesandbox";
-      // V18: remove once v18 is available as latest
+      // TODO_V18: temp
       window.EXCALIDRAW_ASSET_PATH = "https://esm.sh/@excalidraw/excalidraw@0.18.0-rc.3/dist/prod/";
     </script>
     <link rel="stylesheet" href="/dist/dev/index.css" />
